# jaxon2-draft

./: CMakeLists.txt  README.md
model/JAXON2/: JAXON2.body  JAXON2_BODY.body  JAXON2_BUSH.body  JAXON2_LARM.body  JAXON2_LHAND.body  JAXON2_LLEG.body  JAXON2_LLEG_BUSH.body  JAXON2_RARM.body  JAXON2_RHAND.body  JAXON2_RLEG.body  JAXON2_RLEG_BUSH.body  LICENSE
model/JAXON2/resource/convex_hull/: FINGER_BB_0.wrl  FINGER_BB_1.wrl
sample/: CMakeLists.txt  Jaxon2IkTest.cnoid  Jaxon2JointGains.h  Jaxon2SampleWalkPattern.cnoid  Jaxon2SampleWalkPattern.pseq  Jaxon2Stabilizer.cnoid  Jaxon2StandingStabilizer.cnoid  Jaxon2StandingStabilizer.cpp  Jaxon2Walk.cnoid  Jaxon2WalkController.cpp  Jaxon2WalkInLabo.cnoid  Jaxon2WalkPatternController.cnoid  Jaxon2WalkPatternController.cpp  Jaxon2WalkStabilizer.cnoid  Jaxon2WalkStabilizer.cpp  PlantAccident.cnoid  ZMPUtils.h  iktest.py
